src/snapshots/stroemung__simulation__tests__deserialize-2.snap
---
source: src/simulation.rs
expression: result
---
{
  "size": [
    4,
    3
  ],
  "cell_size": [
    0.1,
    0.2
  ],
  "delt": 0.005,
  "gamma": 0.9,
  "reynolds": 100.0,
  "initial_norm_squared": 899.9547140394143,
  "sor_absolute_epsilon": 0.001,
  "max_iterations": 100,
  "iterations": 0,
  "time": 0.0,
  "omega": 1.7,
  "grid": {
    "size": [
      4,
      3
    ],
    "pressure": {
      "v": 1,
      "dim": [
        4,
        3
      ],
      "data": [
        0.0,
        0.2539642899437815,
        0.0,
        0.2539642899437815,
        0.2539669433626628,
        0.2539642899437815,
        -0.1460294667176743,
        -0.146030992433531,
        -0.1460294667176743,
        0.0,
        -0.1460294667176743,
        0.0
      ]
    },
    "u": {
      "v": 1,
      "dim": [
        4,
        3
      ],
      "data": [
        -0.999998967898097,
        1.0,
        -0.999998967898097,
        -0.999998967898097,
        0.999998967898097,
        -0.999998967898097,
        -0.999998967898097,
        0.999998967898097,
        -0.999998967898097,
        -1.0,
        1.0,
        -1.0
      ]
    },
    "v": {
      "v": 1,
      "dim": [
        4,
        3
      ],
      "data": [
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0
      ]
    },
    "cell_type": {
      "v": 1,
      "dim": [
        4,
        3
      ],
      "data": [
        {
          "Boundary": "NoSlip"
        },
        {
          "Boundary": {
            "Inflow": {
              "velocity": [
                1.0,
                0.0
              ]
            }
          }
        },
        {
          "Boundary": "NoSlip"
        },
        {
          "Boundary": "NoSlip"
        },
        "Fluid",
        {
          "Boundary": "NoSlip"
        },
        {
          "Boundary": "NoSlip"
        },
        "Fluid",
        {
          "Boundary": "NoSlip"
        },
        {
          "Boundary": "NoSlip"
        },
        {
          "Boundary": "Outflow"
        },
        {
          "Boundary": "NoSlip"
        }
      ]
    }
  }
}
