src/snapshots/stroemung__simulation__tests__serialize.snap
---
source: src/simulation.rs
expression: simulation
---
{
  "size": [
    5,
    7
  ],
  "cell_size": [
    1.0,
    2.0
  ],
  "delt": 1.4,
  "gamma": 1.7,
  "reynolds": 100.0,
  "initial_norm_squared": 0.0,
  "grid": {
    "size": [
      5,
      7
    ],
    "pressure": {
      "v": 1,
      "dim": [
        5,
        7
      ],
      "data": [
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0
      ]
    },
    "u": {
      "v": 1,
      "dim": [
        5,
        7
      ],
      "data": [
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0
      ]
    },
    "v": {
      "v": 1,
      "dim": [
        5,
        7
      ],
      "data": [
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0
      ]
    },
    "cell_type": {
      "v": 1,
      "dim": [
        5,
        7
      ],
      "data": [
        "Fluid",
        "Fluid",
        "Fluid",
        "Fluid",
        "Fluid",
        "Fluid",
        "Fluid",
        "Fluid",
        "Fluid",
        "Fluid",
        "Fluid",
        "Fluid",
        "Fluid",
        "Fluid",
        "Fluid",
        "Fluid",
        "Fluid",
        "Fluid",
        "Fluid",
        "Fluid",
        "Fluid",
        "Fluid",
        "Fluid",
        "Fluid",
        "Fluid",
        "Fluid",
        "Fluid",
        "Fluid",
        "Fluid",
        "Fluid",
        "Fluid",
        "Fluid",
        "Fluid",
        "Fluid",
        "Fluid"
      ]
    }
  }
}
