src/snapshots/stroemung__simulation__tests__simulation_tick-2.snap
---
source: src/simulation.rs
expression: sim.g
---
{
  "v": 1,
  "dim": [
    4,
    3
  ],
  "data": [
    0.0,
    -0.0,
    0.0,
    0.0,
    0.0,
    0.0,
    0.0,
    0.0,
    0.0,
    0.0,
    0.0,
    0.0
  ]
}
