src/snapshots/stroemung__simulation__tests__simulation_tick-3.snap
---
source: src/simulation.rs
expression: sim.rhs
---
{
  "v": 1,
  "dim": [
    4,
    3
  ],
  "data": [
    0.0,
    0.0,
    0.0,
    0.0,
    -1942.4999999999998,
    0.0,
    0.0,
    -57.49999999999999,
    0.0,
    0.0,
    0.0,
    0.0
  ]
}
