src/snapshots/stroemung__simulation__tests__simulation_tick-5.snap
---
source: src/simulation.rs
expression: sim.f
---
{
  "v": 1,
  "dim": [
    4,
    3
  ],
  "data": [
    0.0,
    1.0,
    0.0,
    -1.0000000000000044,
    0.9950000000000055,
    -1.0000000000000044,
    -0.999999999999938,
    0.999999999999938,
    -0.999999999999938,
    0.0,
    0.999999999999938,
    0.0
  ]
}
