src/snapshots/stroemung__simulation__tests__simulation_tick-7.snap
---
source: src/simulation.rs
expression: sim.rhs
---
{
  "v": 1,
  "dim": [
    4,
    3
  ],
  "data": [
    0.0,
    0.0,
    0.0,
    0.0,
    -9.999999999988907,
    -2000.0000000000089,
    0.0,
    9.999999999865006,
    0.00000000013278267374516872,
    0.0,
    0.0,
    1999.999999999876
  ]
}
