src/snapshots/stroemung__simulation__tests__simulation_tick-9.snap
---
source: src/simulation.rs
expression: sim
---
{
  "size": [
    4,
    3
  ],
  "cell_size": [
    0.1,
    0.2
  ],
  "delt": 0.005,
  "gamma": 0.9,
  "reynolds": 100.0,
  "initial_norm_squared": 0.0,
  "sor_absolute_epsilon": 0.001,
  "max_iterations": 100,
  "iterations": 201,
  "time": 1.0050000000000006,
  "omega": 1.7,
  "grid": {
    "size": [
      4,
      3
    ],
    "pressure": {
      "v": 1,
      "dim": [
        4,
        3
      ],
      "data": [
        0.0,
        2000.0736599413933,
        0.0,
        2000.0736599413933,
        2000.0736599413933,
        2000.0736599413933,
        1999.9736599413932,
        1999.973659941393,
        1999.9736599413932,
        0.0,
        1999.9736599413932,
        0.0
      ]
    },
    "u": {
      "v": 1,
      "dim": [
        4,
        3
      ],
      "data": [
        0.0,
        1.0,
        0.0,
        -0.9999999999999742,
        0.9999999999999949,
        -0.9999999999999742,
        -0.9999999999999621,
        0.9999999999999508,
        -0.9999999999999621,
        0.0,
        0.9999999999999621,
        0.0
      ]
    },
    "v": {
      "v": 1,
      "dim": [
        4,
        3
      ],
      "data": [
        0.0,
        -0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        0.0,
        -0.000000000000005684341886080801,
        0.0,
        0.0,
        0.0,
        0.0
      ]
    },
    "cell_type": {
      "v": 1,
      "dim": [
        4,
        3
      ],
      "data": [
        {
          "Boundary": "NoSlip"
        },
        {
          "Boundary": {
            "Inflow": {
              "velocity": [
                1.0,
                0.0
              ]
            }
          }
        },
        {
          "Boundary": "NoSlip"
        },
        {
          "Boundary": "NoSlip"
        },
        "Fluid",
        {
          "Boundary": "NoSlip"
        },
        {
          "Boundary": "NoSlip"
        },
        "Fluid",
        {
          "Boundary": "NoSlip"
        },
        {
          "Boundary": "NoSlip"
        },
        {
          "Boundary": "Outflow"
        },
        {
          "Boundary": "NoSlip"
        }
      ]
    }
  }
}
