src/snapshots/stroemung__simulation__tests__simulation_tick.snap
---
source: src/simulation.rs
expression: sim.f
---
{
  "v": 1,
  "dim": [
    4,
    3
  ],
  "data": [
    0.0,
    1.0,
    0.0,
    -0.0,
    0.028749999999999998,
    -0.0,
    -0.0,
    0.0,
    -0.0,
    0.0,
    0.0,
    0.0
  ]
}
